--- a/Danji/Base.lproj/Main.storyboard
+++ b/Danji/Base.lproj/Main.storyboard
@@ -793,22 +793,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <button key="tableHeaderView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="E2u-VY-xKf">
-                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                        <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="fWN-XI-SDh">
+                            <rect key="frame" x="0.0" y="237" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.8980392157" green="0.68627450980000004" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                             <state key="normal" title="+">
                                 <color key="titleColor" red="0.99215686270000003" green="0.94901960780000005" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
-                                <action selector="plusButtonTapped:" destination="sl3-7E-hcv" eventType="touchUpInside" id="8Ah-Pm-vhC"/>
+                                <action selector="plusButtonTapped:" destination="sl3-7E-hcv" eventType="touchUpInside" id="mAl-B1-DWk"/>
                             </connections>
                         </button>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="dialog" rowHeight="151" id="Dee-76-Iia" customClass="DJDialogInputCell">
-                                <rect key="frame" x="0.0" y="130" width="320" height="151"/>
+                                <rect key="frame" x="0.0" y="86" width="320" height="151"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dee-76-Iia" id="24f-cI-fAm">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
